--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
+  "homepage": "https://codefordenver.github.io/expunge-colorado-screener",
   "dependencies": {
-    "husky": "^4.3.5",
     "node-sass": "4.14.1",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.0",
     "survey-react": "^1.8.13"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b gh-pages -d build"
   },
   "husky": {
     "hooks": {
@@ -28,5 +29,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0",
+    "husky": "^4.3.5",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0"
   }
 }
