--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "homepage": "https://codefordenver.github.io/expunge-colorado-screener",
   "dependencies": {
+    "jssha": "^3.2.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
