--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -b gh-pages -d build"
+    "deploy": "gh-pages -b gh-pages -d build",
+    "test": "jest"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   },
   "husky": {
     "hooks": {
@@ -32,9 +36,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@testing-library/react": "^11.2.2",
+    "babel-jest": "^26.6.3",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.5",
     "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
