--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.0",
-    "survey-react": "^1.8.13"
+    "survey-react": "^1.8.13",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
