--- a/serverless/expunge/serverless.yml
+++ b/serverless/expunge/serverless.yml
@@ -34,7 +34,7 @@ provider:
       - dynamodb:PutItem
       - dynamodb:UpdateItem
       - dynamodb:DeleteItem
-      Resource: "arn:aws:dynamodb:us-west-2:061931186793:table/edison-pizza"
+      Resource: arn:aws:dynamodb:us-west-2:061931186793:table/expunge-results
 
 package:
   exclude:
@@ -44,7 +44,7 @@ package:
 
 functions:
   expunge:
-    handler: handlers/handler.expunge
+    handler: handler.expunge
     events:
       - http: 
           path: /result
@@ -61,7 +61,7 @@ functions:
 
 resources:
   Resources:
-    edisonPizzaTable: 
+    expungeResultTable: 
       Type: AWS::DynamoDB::Table
       Properties:
         TableName: expunge-results
