--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -b gh-pages -d build"
+    "deploy": "gh-pages -b gh-pages -d build",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -33,8 +34,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "babel-jest": "^26.6.3",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.1",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.5",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0"
   }
