--- a/package.json
+++ b/package.json
@@ -35,13 +35,10 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "@testing-library/react": "^11.2.3",
     "babel-jest": "^26.6.3",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.1",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.5",
-    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0"
   }
