--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "homepage": "https://codefordenver.github.io/expunge-colorado-screener",
   "dependencies": {
+    "@testing-library/react-hooks": "^5.0.3",
+    "axios": "^0.21.1",
     "jssha": "^3.2.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
@@ -34,9 +36,10 @@
     ]
   },
   "devDependencies": {
-    "aws-sdk": "^2.829.0",
+    "@babel/helper-regex": "^7.10.5",
     "@babel/preset-env": "^7.12.11",
     "@testing-library/react": "^11.2.3",
+    "aws-sdk": "^2.829.0",
     "babel-jest": "^26.6.3",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.5",
