--- a/serverless/expunge/serverless.yml
+++ b/serverless/expunge/serverless.yml
@@ -64,13 +64,17 @@ resources:
     expungeResultTable: 
       Type: AWS::DynamoDB::Table
       Properties:
-        TableName: expunge-results
+        TableName: expunge-survey-results
         AttributeDefinitions:
           - AttributeName: uuid
+            AttributeType: S
+          - AttributeName: type
             AttributeType: S
         KeySchema:
           - AttributeName: uuid
             KeyType: HASH
+          - AttributeName: type
+            KeyType: RANGE
         ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
