Never updated the GET and DELETE requests after adding the sort key

--- a/serverless/expunge/serverless.yml
+++ b/serverless/expunge/serverless.yml
@@ -55,7 +55,7 @@ functions:
           method: PUT
           cors: true 
       - http:
-          path: /result/{uuid}
+          path: /result
           method: DELETE
           cors: true 
 
