--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@testing-library/react-hooks": "^5.0.3",
     "axios": "^0.21.1",
+    "contentful": "^8.2.0",
     "jssha": "^3.2.0",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
