--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "homepage": "https://codefordenver.github.io/expunge-colorado-screener",
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^14.1.2",
     "@testing-library/react-hooks": "^5.0.3",
     "axios": "^0.21.1",
     "contentful": "^8.2.0",
