--- a/serverless/report/serverless.yml
+++ b/serverless/report/serverless.yml
@@ -26,11 +26,16 @@ provider:
     lambdaHashingVersion: 20201221
     region: us-west-2
     iamRoleStatements:
-        - Effect: 'Allow'
-          Action:
-              - dynamodb:Query
-              - dynamodb:Scan
-          Resource: arn:aws:dynamodb:us-west-2:061931186793:table/expunge-results
+      - Effect: 'Allow'
+        Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        Resource: arn:aws:dynamodb:us-west-2:061931186793:table/expunge-results
+      - Effect: 'Allow'
+        Action:
+        - s3:PutObject
+        Resource: "arn:aws:s3:::cfdreportbucket"
+
 
 package:
     exclude:
